# KGL_Gene

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  execenv.cpp  execenv.h  kgl_alphabet_amino.cc  kgl_alphabet_amino.h  kgl_alphabet_base.cc  kgl_alphabet_base.h  kgl_alphabet_coding_dna5.h  kgl_alphabet_dna5.cc  kgl_alphabet_dna5.h  kgl_alphabet_extend.cc  kgl_alphabet_extend.h  kgl_alphabet_readcount.h  kgl_alphabet_string.cc  kgl_alphabet_string.h  kgl_amino.cc  kgl_amino.h  kgl_amino_sequence.cc  kgl_amino_sequence.h  kgl_application.cc  kgl_application.h  kgl_attributes.cc  kgl_attributes.h  kgl_base_sequence.cc  kgl_base_sequence.h  kgl_consume_sam.cc  kgl_consume_sam.h  kgl_exec_env.cc  kgl_exec_env.h  kgl_exec_env_boost.cc  kgl_filter.cc  kgl_filter.h  kgl_genome.cc  kgl_genome.h  kgl_genome_analysis.cc  kgl_genome_analysis.h  kgl_genome_contig.cc  (+132 more)
dEploid/: dEploid.cpp  dEploidIO.hpp  mcmc.cpp
kel_app/: kel_exec_env.cpp  kel_exec_env.h  kel_exec_env_app.h  kel_logging.cpp  kel_logging.h  kel_logging_new.cpp  kel_logging_new.h  kel_logging_source.h  kel_logging_spd.cpp  kel_logging_spd.h  kel_logging_stream.cpp  kel_logging_stream.h  kel_property_tree.cpp  kel_property_tree.h
kel_io/: kel_basic_io.cpp  kel_basic_io.h  kel_bzip.cpp  kel_bzip.h  kel_bzip_verify.cpp  kel_bzip_workflow.cpp  kel_bzip_workflow.h  kel_bzip_workflow_verify.cpp  kel_file_io.cpp  kel_file_io.h  kel_mt_buffer.cpp  kel_mt_buffer.h  kel_rest_api.cpp  kel_rest_api.h  kel_workflow_bgztest.cpp
kel_library/: kel_basic_io.cc  kel_basic_io.h  kel_distribution.cc  kel_distribution.cpp  kel_distribution.h  kel_exec_env.cc  kel_exec_env.h  kel_lock.h  kel_logging.cc  kel_logging.h  kel_mt_queue.h  kel_optimize.cpp  kel_optimize.h  kel_patterns.h  kel_percentile.h  kel_property_tree.cc  kel_property_tree.cpp  kel_property_tree.h  kel_thread_pool.h  kel_utility.cc  kel_utility.h
kel_math/: kel_distribution.cpp  kel_optimize.cpp  kel_percentile.h
kel_thread/: kel_bound_queue.h  kel_bound_queue_monitor.h  kel_movefunction.h  kel_mt_queue.h  kel_ordered_workflow_queue.h  kel_queue_monitor.h  kel_queue_mt_safe.h  kel_queue_safe.h  kel_queue_stream.cpp  kel_queue_tidal.h  kel_thread_pool.h  kel_workflow_async.h  kel_workflow_asynch.h  kel_workflow_bgztest.cpp  kel_workflow_example.cpp  kel_workflow_future.h  kel_workflow_pipeline.h  kel_workflow_queue.h  kel_workflow_sync.cpp  kel_workflow_sync.h  kel_workflow_synch.h  kel_workflow_threads.h  kel_workflow_unitasync.cpp  kel_workflow_unitasynch.cpp  kel_workflow_unitmain.cpp  kel_workflow_unitsync.cpp  kel_workflow_unitsynch.cpp  kel_workflow_unittest.cpp  kel_workflow_unittest.h  kel_workflow_unitwork.cpp
kel_utility/: kel_basic_io.cpp  kel_basic_io.h  kel_bound_queue.h  kel_bzip.cpp  kel_bzip.h  kel_bzip_verify.cpp  kel_bzip_workflow.cpp  kel_bzip_workflow.h  kel_date_time.cpp  kel_date_time.h  kel_distribution.cpp  kel_distribution.h  kel_exec_env.cpp  kel_exec_env.h  kel_exec_env_app.h  kel_interval.cpp  kel_interval.h  kel_interval_map.h  kel_interval_set.cpp  kel_interval_set.h  kel_interval_type.h  kel_interval_unsigned.h  kel_logging.cpp  kel_logging.h  kel_mem_alloc.cpp  kel_mem_alloc.h  kel_mon_queue.cpp  kel_mon_queue.h  kel_mt_queue.h  kel_optimize.h  kel_patterns.h  kel_percentile.h  kel_property_tree.cpp  kel_property_tree.h  kel_rest_api.cpp  kel_rest_api.h  kel_search.cpp  kel_search.h  kel_string_hash.h  kel_thread_pool.h  (+2 more)
kga_analytic/: kga_analysis_all.h  kga_analysis_factory.cpp
kgl_analytic/: kgl_age_analysis.cc  kgl_age_analysis.h  kgl_analysis_all.h  kgl_analysis_info_filter.cc  kgl_analysis_info_filter.h  kgl_analysis_interval.cc  kgl_analysis_interval.h  kgl_analysis_mutation.cc  kgl_analysis_mutation.cpp  kgl_analysis_mutation.h  kgl_analysis_mutation_homhet.cpp  kgl_analysis_mutation_inbreed.cpp  kgl_analysis_mutation_inbreed.h  kgl_analysis_mutation_inbreed_aux.cpp  kgl_analysis_mutation_inbreed_aux.h  kgl_analysis_mutation_inbreed_calc.cpp  kgl_analysis_mutation_inbreed_calc.h  kgl_analysis_mutation_inbreed_execute.cpp  kgl_analysis_mutation_inbreed_execute.h  kgl_analysis_mutation_inbreed_freq.cpp  kgl_analysis_mutation_inbreed_freq.h  kgl_analysis_mutation_inbreed_freqdb.cpp  kgl_analysis_mutation_inbreed_freqdb.h  kgl_analysis_mutation_inbreed_locus.cpp  kgl_analysis_mutation_inbreed_locus.h  kgl_analysis_mutation_inbreed_output.cpp  kgl_analysis_mutation_inbreed_output.h  kgl_analysis_mutation_locus.cpp  kgl_analysis_mutation_recomb_compare.cpp  kgl_analysis_mutation_syngen.cpp  kgl_analysis_mutation_syngen.h  kgl_analysis_mutation_synthetic.cpp  kgl_analysis_mutation_synthetic.h  kgl_analysis_null.cc  kgl_analysis_null.cpp  kgl_analysis_null.h  kgl_analysis_verify.cpp  kgl_analysis_verify.h  kgl_analysis_virtual.h  kgl_distribution_analysis.cc  (+28 more)
kgl_app/: kgl_gene_app.cc  kgl_gene_app.cpp  kgl_gene_app.h  kgl_gene_parse.cpp  kgl_main.cc  kgl_package.cc  kgl_package.cpp  kgl_package.h  kgl_package_analysis.cc  kgl_package_analysis.cpp  kgl_package_analysis.h  kgl_package_analysis_virtual.h  kgl_package_resource.cpp  kgl_package_resource_pf.cpp  kgl_package_resources.cpp  kgl_phylogenetic_analysis.cc  kgl_phylogenetic_analysis.h  kgl_phylogenetic_app.cc  kgl_phylogenetic_app.h  kgl_phylogenetic_app_analysis.cc  kgl_phylogenetic_app_analysis.h  kgl_phylogenetic_env.cc  kgl_phylogenetic_env.h  kgl_phylogenetic_gene.cc  kgl_phylogenetic_gene.h  kgl_phylogenetic_option.cc  kgl_phylogenetic_option.h  kgl_phylogenetic_option_definitions.cc  kgl_phylogenetic_parse.cc  kgl_ploidy_analysis.cc  kgl_ploidy_analysis.h  kgl_properties.cc  kgl_properties.cpp  kgl_properties.h  kgl_properties_resource.cpp  kgl_properties_resource.h  kgl_properties_resource_items.cpp  kgl_properties_resource_new.cpp  kgl_properties_resource_pf.cpp  kgl_resource_db.cpp  (+11 more)
kgl_genomics/: kgl_alphabet_amino.cpp  kgl_data_file_impl.cpp  kgl_data_file_impl.h  kgl_filter.cpp  kgl_filter.h  kgl_genome_aux_csv.h  kgl_genome_db.h  kgl_genome_prelim.h  kgl_gff_fasta.cpp  kgl_ped_parser.cpp  kgl_ped_parser.h  kgl_phylogenetic_tree.h  kgl_sequence_base.h  kgl_table.h  (+29 more)
(+1695 files in other folders)
